added more pages

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="header">
-    
-    <a href="index.html">Home</a> 
-    <a href="about.html">About</a> 
-    <a href="http://pscott1.pythonanywhere.com">Games</a> 
-    <a href="ideas.html">Resume</a>
-  </div>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="games.html">Games</a>
+    <a href="resume.html">Resume</a>
+  </nav>
   
   <div class="main-content">
     <p>Hello, I am Patrick. I am an undergraduate student at the Universty of Maryland. I am studying Computer Science and Economics</p>
