moved around pages

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="games.html">Games</a>
+    <a href="projects.html">Projects</a>
     <a href="resume.html">Resume</a>
   </nav>
   
   <div class="main-content">
-    <p>Hello, I am Patrick. I am an undergraduate student at the Universty of Maryland. I am studying Computer Science and Economics</p>
+    <div class="textbox">
+      <p>Hello, I am Patrick. I am an undergraduate student at the Universty of Maryland, studying Computer Science.</p>
+    </div>
   </div>
-  
 </body>
   
   
