--- a/projects.html
+++ b/projects.html
@@ -5,13 +5,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="games.html">Games</a>
+    <a href="projects.html">Projects</a>
     <a href="resume.html">Resume</a>
   </nav>
+
+  <div class="projectlinks">
+    <a href="https://pascoot22.github.io/320-project/">
+      <div class="title">Lego Machine Learning Project</div>
+      <div class="subtitle">Analysis of how legos have changed over time using machine learning models</div>
+    </a>
+    <a href="">
+      <div class="title">Twitter </div>
+      <div class="subtitle">Analysis of how legos have changed over time using machine learning models</div>
+    </a>
+    <a href="http://pscott1.pythonanywhere.com">
+      <div class="title">Number Guessing Game</div>
+      <div class="subtitle">Try to guess a 3 digit number in 7 guesses, where hints are given after each guess</div>
+    </a>
+    
+  </div>
   
  
   
