--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="games.html">Games</a>
+    <a href="projects.html">Projects</a>
     <a href="resume.html">Resume</a>
   </nav>
   
