--- a/resume.html
+++ b/resume.html
@@ -5,11 +5,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="games.html">Games</a>
+    <a href="projects.html">Projects</a>
     <a href="resume.html">Resume</a>
   </nav>
   
