--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       <p>Hello, I am Patrick. I am an undergraduate student at the Universty of Maryland, studying Computer Science.</p>
     </div>
   </div>
+  <p></p>
+  <div class="main-content">
+    <div class="textbox">
+      <p>Hello, I am Patrick. I am an undergraduate student at the Universty of Maryland, studying Computer Science.</p>
+    </div>
+  </div>
 </body>
   
   
