--- a/projects.html
+++ b/projects.html
@@ -13,18 +13,14 @@
   </nav>
 
   <div class="projectlinks">
-    <a href="https://pascoot22.github.io/320-project/">
-      <div class="title">Lego Machine Learning Project</div>
-      <div class="subtitle">Analysis of how legos have changed over time using machine learning models</div>
-    </a>
-    <a href="">
-      <div class="title">Twitter </div>
-      <div class="subtitle">Analysis of how legos have changed over time using machine learning models</div>
-    </a>
-    <a href="http://pscott1.pythonanywhere.com">
-      <div class="title">Number Guessing Game</div>
-      <div class="subtitle">Try to guess a 3 digit number in 7 guesses, where hints are given after each guess</div>
-    </a>
+    <a href="https://pascoot22.github.io/320-project/">Lego Machine Learning Project</a>
+    <div class="subtitle">Analysis of how legos have changed over time using machine learning models</div>
+    <p> </p>
+    <a href="CMSC396H_Final_Writeups.pdf">Twitter Sentiments Based on Weather</a>
+    <div class="subtitle">Analysis of how the weather effects the sentiment of people on twitter in different regions</div>
+    <p> </p>
+    <a href="http://pscott1.pythonanywhere.com">Number Guessing Game</a>
+    <div class="subtitle">Try to guess a 3 digit number in 7 guesses, where hints are given after each guess</div>
     
   </div>
   
