--- a/resume.html
+++ b/resume.html
@@ -12,6 +12,8 @@
     <a href="resume.html">Resume</a>
   </nav>
   
+  <embed src="Patrick Scott resume.pdf" width="70%" height="600"
+ type="application/pdf">
   
   
 </body>
