resume format fixed

--- a/resume.html
+++ b/resume.html
@@ -12,8 +12,10 @@
     <a href="resume.html">Resume</a>
   </nav>
   
+  <div class="resume">
   <embed src="Patrick Scott resume.pdf" width="70%" height="600"
  type="application/pdf">
+  </div>
   
   
 </body>
